# Nyxbyte

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml
include/nyxbyte/: brain.hpp  monitor_layout.hpp  settings.hpp
src/: ambient_brain.cpp  app.manifest  main.cpp  resource.h  resource.rc  settings.cpp
tests/: monitor_layout_tests.cpp  settings_tests.cpp
